--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
-asgiref==3.7.2
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.1
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+asgiref==3.8.1
+attrs==24.2.0
 backoff==2.2.1
 boto3==1.34.53
 botocore==1.34.53
 branca==0.7.0
 certifi==2023.11.17
 cffi==1.16.0
+channels==4.1.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cryptography==42.0.5
 decorator==5.1.1
-Django==3.2.23
+Django==3.0
 django-anymail==10.2
 django-environ==0.11.2
 django-filter==23.5
 django-storages==1.14.2
 folium==0.15.1
+frozenlist==1.4.1
 future==0.18.3
 geocoder==1.38.1
 geographiclib==2.0
@@ -26,13 +33,17 @@ idna==3.6
 Jinja2==3.1.2
 jmespath==1.0.1
 MarkupSafe==2.1.3
+multidict==6.0.5
 numpy==1.26.2
 opencage==2.4.0
 packaging==23.2
 phonenumbers==8.13.27
 pillow==10.2.0
 pycparser==2.21
+pyfiglet==1.0.2
+PyJWT==2.9.0
 python-dateutil==2.9.0
+python-decouple==3.8
 pytz==2023.3.post1
 ratelim==0.1.6
 requests==2.31.0
@@ -40,7 +51,9 @@ s3transfer==0.10.0
 six==1.16.0
 sqlparse==0.4.4
 timezonefinder==6.4.0
+twilio==9.2.3
 tzdata==2023.3
 urllib3==2.0.7
 whitenoise==6.6.0
 xyzservices==2023.10.1
+yarl==1.9.4
